Fixed margin on mobile screen

--- a/_scss/_typography.scss
+++ b/_scss/_typography.scss
@@ -38,6 +38,14 @@ h2,
 .h2 {
   font-size: 1.6rem;
 }
+
+@media screen and (max-width: 768px) {
+  h2,
+    .h2 {
+      font-size: 1.2rem;
+    }
+}
+
 h3,
 .h3 {
   font-size: 1.4rem;
